--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@supabase/supabase-js": "^2.7.1",
     "prettier": "^2.8.3",
     "react-router-dom": "^6.6.2"
   },
